# ElvenEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Elven.sln  LICENSE  README.md  premake5.lua  settings.cfg
Allocators/: premake5.lua
Engine/: CMakeLists.txt  engine_settings.cfg
Engine/assets/shaders/: mesh_phong.frag  object_render.frag  post_processing.frag  post_processing.vert  quad.frag  quad.vert  skybox.frag  skybox.vert  text2d.frag
Engine/res/shaders/: light_debug.frag  mesh_phong.frag  mesh_phong.vert
Engine/src/: Elven.h  elpch.h
Engine/src/Core/: Application.cpp  Application.h  CRC32.h  Core.h  EntryPoint.cpp  EntryPoint.h  FileSystem.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Profiler.cpp  Profiler.h  Semaphore.h  SettingsConfig.cpp  SettingsConfig.h  StringId.h  TimeHelpers.h  Timer.h  Window.cpp  Window.h
Engine/src/Editor/: Editor.cpp  Editor.h  EditorHelpers.cpp  EditorHelpers.h  ImGuiOverlay.cpp  ImGuiOverlay.h
Engine/src/Editor/Panels/: ProfileTelemetryPanel.cpp  ProfileTelemetryPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/src/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  EventHandler.h  EventManager.cpp  EventManager.h  KeyEvent.h  MeshEvent.h  MouseEvent.h  PhysicsEvent.h  TextureEvent.h
Engine/src/ImGui/: EditorHelpers.cpp  EditorHelpers.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiOverlay.cpp  ImGuiOverlay.h  imgui_impl_opengl3.cpp
Engine/src/Platform/: OpenGLCommon.cpp  OpenGLCommon.h
Engine/src/Platform/GLFW/: GLFWWindowImpl.cpp  GLFWWindowImpl.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/OpenGL41/: OpenGL41Buffer.cpp  OpenGL41Buffer.h  OpenGL41Check.h  OpenGL41Context.cpp  OpenGL41Context.h  OpenGL41RenderTarget.cpp  OpenGL41RenderTarget.h  OpenGL41RendererAPI.cpp  OpenGL41RendererAPI.h  OpenGL41Texture.cpp  OpenGL41Texture.h  OpenGL41VertexArray.cpp  OpenGL41VertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCameraController.cpp  EditorCameraController.h  GraphicsContext.cpp  GraphicsContext.h  Helpers2d.cpp  Helpers2d.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCameraController.cpp  OrthographicCameraController.h  PostProcessor.cpp  PostProcessor.h  RenderCommand.cpp  RenderCommand.h  RenderTopology.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp  (+5 more)
Engine/src/Renderer/Primitives/: Cube.cpp  Cube.h
Engine/src/Renderer/RHI/: Buffer.cpp  Buffer.h  Cubemap.h  GraphicsContext.cpp  GraphicsContext.h  RenderTarget.cpp  RenderTarget.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Resources/: AudioManager.cpp  AudioManager.h  FontManager.cpp  FontManager.h  MeshLibrary.cpp  MeshLibrary.h  ModelImporter.cpp  ModelImporter.h  TextureManager.cpp  TextureManager.h
Engine/src/Scene/: Behavior.cpp  Behavior.h  Component.cpp  Component.h  ComponentSystem.cpp  ComponentSystem.h  Entity.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  World.h
Engine/src/Scene/Components/: ComponentSerializerHelper.cpp  ComponentSerializerHelper.h  ComponentsDef.cpp  LightComponent.cpp  LightComponent.h  SceneComponents.cpp  SceneComponents.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/src/Scene/Systems/: BehaviorSystem.cpp  BehaviorSystem.h  LightSystem.cpp  LightSystem.h  Physics2dSystem.cpp  Physics2dSystem.h  Primitives2dDrawSystem.h  Render2dSystem.cpp  Render2dSystem.h  RenderSystem.cpp  RenderSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h
Games/Invaders/: CMakeLists.txt  settings.cfg
Games/Invaders/src/: Invaders.cpp  Invaders.h
Games/TRON/: CMakeLists.txt  settings.cfg
Games/TRON/src/: TRON.cpp  TRON.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/assets/scenes/: default.scene
Sandbox/assets/shaders/: shader.frag  shader.vert  texture_shader.frag  texture_shader.vert
Sandbox/res/shaders/: shader.frag  shader.vert
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp  SandboxApp.h  TestAllocatorsLayer.cpp  TestAllocatorsLayer.h  TestLayer2D.cpp  TestLayer2D.h  TestLayer3D.cpp  TestLayer3D.h
Sandbox3D/: CMakeLists.txt  settings.cfg
Sandbox3D/assets/models/adam/: adamHead.gltf
Sandbox3D/assets/models/backpack/: backpack.fbx  scene.gltf
Sandbox3D/assets/models/dark_knight/: license.txt  scene.gltf
Sandbox3D/assets/models/robot/: robot.mtl
Sandbox3D/assets/models/sponza/: sponza.mtl
Sandbox3D/assets/shaders/: colors.frag  colors.vert  default.frag  default.vert  light_cube.frag  light_cube.vert  mesh.frag  model.frag  shader.frag  text2d.vert  texture_shader.vert  textured_cube.frag  textured_cube.vert  textured_cube_with_dir_light_caster.frag  textured_cube_with_light_casters.frag  textured_cube_with_point_light_caster copy.frag  textured_cube_with_spotlight_caster.frag
Sandbox3D/src/: CubesSandbox.cpp  CubesSandbox.h  LightCastersSandbox.cpp  LightCastersSandbox.h  LightingSandbox.cpp  LightingSandbox.h  MeshModelSandbox.cpp  MeshModelSandbox.h  PrimitivesSandbox.cpp  PrimitivesSandbox.h  SandboxApp.cpp  SandboxApp.h  SimpleLightSandbox.cpp  SimpleLightSandbox.h
Sandbox3D/src/Helpers/: EnvironmentSettings.h
(+112 files in other folders)
